makes things look a bit better, fixes bugs

--- a/rps/index.html
+++ b/rps/index.html
@@ -41,6 +41,9 @@
                 <div class="winner">
                     <p id="winner"></p>
                 </div>
+                <div class="cta">
+                    <p class="calltoaction">Make your choice!</p>
+                </div>
             </div>
         </main>
     </body>
